feat(app): add static pages listing and router

--- a/Python Sample/fatsever/app/templates/chat.html
+++ b/Python Sample/fatsever/app/templates/chat.html
@@ -9,7 +9,7 @@
     <input type="text" id="messageInput" class="form-control" placeholder="輸入訊息" autocomplete="off">
     <button id="sendBtn" class="btn btn-primary">送出</button>
   </div>
-  <script src="/static/js/chat.js"></script>
+  <script src="/assets/js/chat.js"></script>
   {% endblock content %}
 </div>
 {% endblock container %}
