--- a/Python Sample/fatsever/app/static/css/index.css
+++ b/Python Sample/fatsever/app/static/css/index.css
@@ -98,7 +98,8 @@ body.monokai nav {
 
 body.monokai nav a.brand-logo,
 body.monokai nav a,
-body.monokai #themeToggle {
+body.monokai #themeToggle,
+body.monokai #mobileThemeToggle {
   color: #f8f8f2;
 }
 
@@ -110,7 +111,8 @@ body.monokai #themeToggle {
 }
 
 /* 讓暗黑模式切換圖示在導覽列中垂直置中 */
-nav #themeToggle {
+nav #themeToggle,
+nav #mobileThemeToggle {
   display: flex;
   align-items: center;
   height: 64px;          /* 導覽列預設高度 */
