--- a/Python Sample/fatsever/app/templates/base.html
+++ b/Python Sample/fatsever/app/templates/base.html
@@ -13,7 +13,8 @@
   <nav class="blue">
     <div class="nav-wrapper container">
       <a href="/" class="brand-logo">FatAPI Server</a>
-      <ul id="nav-mobile" class="right">
+      <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="/">Home</a></li>
         <li><a href="/chat">Chat</a></li>
         <li><a href="/status">Status</a></li>
@@ -25,6 +26,16 @@
       </ul>
     </div>
   </nav>
+  <ul class="sidenav" id="mobile-nav">
+    <li><a href="/">Home</a></li>
+    <li><a href="/chat">Chat</a></li>
+    <li><a href="/status">Status</a></li>
+    <li>
+      <a id="mobileThemeToggle" class="btn-flat" aria-label="dark mode switch" href="#!">
+        <i class="fas fa-sun" id="mobileThemeIcon"></i>
+      </a>
+    </li>
+  </ul>
   {% endblock navigation %}
 
   <!-- 主要內容區塊 -->
